[gd_scene load_steps=26 format=3 uid="uid://dkb0g18t7po6s"]

[ext_resource type="Script" path="res://scripts/menu/main_menu.gd" id="1_lc5lr"]
[ext_resource type="Texture2D" uid="uid://bxms0i0e86hq2" path="res://assets/Characters/player/player-CrouchSwordSlash.png" id="2_o2qxq"]
[ext_resource type="Texture2D" uid="uid://dxdt46w3qbkmb" path="res://assets/Characters/punk/punch.png" id="3_oxg5q"]
[ext_resource type="Texture2D" uid="uid://ctgewj8h22543" path="res://assets/Characters/ogre/ogre-attack.png" id="4_kcpuf"]
[ext_resource type="AudioStream" uid="uid://bper14y63c65r" path="res://Audio/music/ATaleForTheJourney-MainMenu.wav" id="5_hg4iy"]

[sub_resource type="LabelSettings" id="LabelSettings_gocdv"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_xebc7"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_0s05n"]
font_size = 25
font_color = Color(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_je6hc"]
atlas = ExtResource("2_o2qxq")
region = Rect2(0, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv5j0"]
atlas = ExtResource("2_o2qxq")
region = Rect2(128, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxgms"]
atlas = ExtResource("2_o2qxq")
region = Rect2(256, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bqk0"]
atlas = ExtResource("2_o2qxq")
region = Rect2(384, 0, 128, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_xn0tj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je6hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv5j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxgms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqk0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_14dx6"]
atlas = ExtResource("3_oxg5q")
region = Rect2(0, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq0en"]
atlas = ExtResource("3_oxg5q")
region = Rect2(96, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj84q"]
atlas = ExtResource("3_oxg5q")
region = Rect2(192, 0, 96, 63)

[sub_resource type="SpriteFrames" id="SpriteFrames_miajt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14dx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq0en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj84q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3eoj6"]
atlas = ExtResource("4_kcpuf")
region = Rect2(0, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_54kfh"]
atlas = ExtResource("4_kcpuf")
region = Rect2(144, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryj4i"]
atlas = ExtResource("4_kcpuf")
region = Rect2(288, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_njvgj"]
atlas = ExtResource("4_kcpuf")
region = Rect2(432, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2q6q"]
atlas = ExtResource("4_kcpuf")
region = Rect2(576, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdpg0"]
atlas = ExtResource("4_kcpuf")
region = Rect2(720, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwvcq"]
atlas = ExtResource("4_kcpuf")
region = Rect2(864, 0, 144, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_7452b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eoj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54kfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryj4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njvgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2q6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdpg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwvcq")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_lc5lr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="title" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "20 SECOND
FIGHT"
label_settings = SubResource("LabelSettings_gocdv")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="start" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="controls" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="credit" type="Label" parent="."]
offset_left = 1075.0
offset_top = 607.0
offset_right = 1259.0
offset_bottom = 704.0
text = "Music: Sara Garrard
Art: Ansimuz (itch.io)
SFX: Helton Yan (itch.io)
Developer: RJay Pickering"
label_settings = SubResource("LabelSettings_xebc7")
horizontal_alignment = 1

[node name="demo" type="Label" parent="."]
offset_left = 1192.0
offset_top = 11.0
offset_right = 1267.0
offset_bottom = 46.0
text = "DEMO"
label_settings = SubResource("LabelSettings_0s05n")
horizontal_alignment = 1

[node name="notes" type="Label" parent="."]
offset_left = 18.0
offset_top = 603.0
offset_right = 202.0
offset_bottom = 700.0
text = "This was made for the 20 second Game Jam 2024. This was also made in 72 hours..."
label_settings = SubResource("LabelSettings_xebc7")
horizontal_alignment = 1
autowrap_mode = 3

[node name="player" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 371)
sprite_frames = SubResource("SpriteFrames_xn0tj")
frame_progress = 0.153161

[node name="enemy1" type="AnimatedSprite2D" parent="."]
position = Vector2(707, 464)
sprite_frames = SubResource("SpriteFrames_miajt")
frame_progress = 0.26363

[node name="enemy2" type="AnimatedSprite2D" parent="."]
position = Vector2(565, 481)
sprite_frames = SubResource("SpriteFrames_7452b")
frame_progress = 0.166603
flip_h = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hg4iy")
autoplay = true

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/VBoxContainer/start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/VBoxContainer/controls" to="." method="_on_controls_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/VBoxContainer/controls" to="." method="_on_controls_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
